[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/ScriptsContainer.gd" type="Script" id=1]

[node name="ScriptsContainer" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 4.0
margin_right = 1274.0
margin_bottom = 716.0
custom_constants/separation = 0

[node name="FileTabContainer" type="TabContainer" parent="VBoxContainer"]
margin_right = 1268.0
margin_bottom = 712.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
drag_to_rearrange_enabled = true

[node name="ScriptsFileDialog" type="FileDialog" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 807.0
margin_bottom = 407.0
rect_min_size = Vector2( 800, 400 )
popup_exclusive = true
access = 2
filters = PoolStringArray( "*.hx", "*.txt", "*.csv" )
current_dir = "/projects/godot_projects/diceymodgeons"
current_path = "/projects/godot_projects/diceymodgeons/"
[connection signal="file_selected" from="ScriptsFileDialog" to="." method="_on_ScriptsFileDialog_file_selected"]
